<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.radog.patm_ws_1.Producto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtNomProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strNomHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtCantProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strCantHint"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strBtnSave" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mostrar" />

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resultados" />
    </LinearLayout>

</RelativeLayout>
